# Chess-Thesis

./: CMakeLists.txt  README.md  board.cpp  board.h  chessboard.cpp  chessboard.h  engine.cpp  engine.h  evaluator.cpp  evaluator.h  main.cpp
src/: CMakeLists.txt  chessboard.cpp  chessboard.h  main.cpp
test/: CMakeLists.txt  testposition.cpp  testrepeat.cpp
